# HPE-distributed-key-value-store

./: CMakeLists.txt  README.md
config/: config.json
include/: KVClient.hpp  KVDistributor.hpp  KVServer.hpp  KVStore.hpp  config.hpp
src/: KVClient.cpp  KVDistributor.cpp  KVServer.cpp  KVStore.cpp  config.cpp  main_client.cpp  main_server.cpp
